--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next-auth": "^4.24.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-quill": "^2.0.0"
+    "react-quill": "^2.0.0",
+    "sharp": "^0.33.0"
   },
   "devDependencies": {
     "prisma": "^5.7.0"
